# Auth_sprint_1

./: .env.template  .flake8  .gitignore  Dockerfile  Makefile  README.md  README_task.md  docker-compose.tests.yaml  docker-compose.yaml  pyproject.toml
requirements/: dev.txt  requirements.txt
src/: config.py  create_admin.py  run.py  wait_for_postgres.sh
src/alembic/: env.py
src/alembic/versions/: 494a3e99e78b_.py  52ee8290ba74_.py  8e04f5f157ab_.py  adabe907e857_.py
src/app/: __init__.py  app.py  auth_api_schema.yaml  config.py  db.py  jwt.py  models.py  redis.py  redis_db.py
src/app/api/v1/: change_user_params.py  logout.py  refresh_token.py  role.py  role_manipulation.py  sign_in.py  sign_out.py  sign_up.py  urls.py  user.py  user_history.py
src/app/models/: __init__.py  login_history.py  role.py  user.py  user_role.py
src/app/tests/: base_auth_test_case.py  run_tests.py  testing_data.py  tests_change_user_params.py  tests_history.py  tests_logout.py  tests_refresh_token.py  tests_role.py  tests_role_manipulation.py  tests_sign_in.py  tests_sign_up.py
src/app/views/: __init__.py  user.py
src/init/: create_admin_and_roles.sql  create_db.sql
src/init_db/: auth_db.sql
src/scripts/: wait_for_dbs.sh  wait_for_postgres.sh
src/tests/: test_user.sh
src/tests/functional/: conftest.py
src/tests/functional/src/: test_hello_world.py
tests/: create_user.sh
