[tool.poetry]
name = "auth_sprint_1"
version = "1"
description = ""
authors = ["Alexandr Galanov <alexandr.galanov@gmail.com>", "Vadim Utkin <utkinvadim1991@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = {version = "2.0.2", extras = ["async"]}

[tool.poetry.dev-dependencies]
black = "21.10b0"
flake8 = "4.0.1"
pre-commit = "2.15.0"
isort = "5.10.1"
pytest = "6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
